--- a/grid.css
+++ b/grid.css
@@ -6,9 +6,10 @@ h1 {
 h2 {font: papyrus;
  color: white;
   text-shadow: 1px 1px 2px black, 0 0 25px black, 0 0 5px black;
-  z-index: -1;
+    padding-top: 20px;
 }
-h4{font-family: fantasy;
+h4{font-family: papyrus;
+  padding-top: 20px
 }
 
 .topnav {background-color: dimgray;
@@ -19,7 +20,7 @@ h4{font-family: fantasy;
 .topnav a {color: #f2f2f2; 
  font-family: fantasy;
   text-align: center;
-  padding: 14px 16px;
+  padding: 20px 20px;
   text-decoration: none;
   font-size: 17px;
 }
