--- a/grid.css
+++ b/grid.css
@@ -8,7 +8,7 @@ h2 {font: papyrus;
   text-shadow: 1px 1px 2px black, 0 0 25px black, 0 0 5px black;
     padding-top: 20px;
 }
-h4{font-family: papyrus;
+h4{font: papyrus;
   padding-top: 20px
 }
 
