--- a/grid.css
+++ b/grid.css
@@ -18,7 +18,7 @@ h4{font: papyrus;
 }
 
 .topnav a {color: #f2f2f2; 
- font-family: fantasy;
+ font-family: verdana;
   text-align: center;
   padding: 20px 20px;
   text-decoration: none;
